// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden profiles — committed profile -> intent -> ranking > categorical-codes: data-aware pipeline matches the committed golden 1`] = `
{
  "intent": {
    "allowNegative": false,
    "density": "sparse",
    "dimensions": 2,
    "goal": "trend",
    "maxNominalCardinality": 3,
    "measures": 1,
    "multiMetrics": false,
    "partToWhole": true,
    "requiresGrouping": true,
    "temporals": 1,
  },
  "profiles": [
    {
      "cardinality": 3,
      "distinctRatio": 1,
      "geoKind": "region",
      "name": "zip",
      "role": "dimension",
      "type": "nominal",
    },
    {
      "cardinality": 3,
      "distinctRatio": 1,
      "name": "year",
      "role": "dimension",
      "temporalGranularity": "year",
      "temporalRegular": true,
      "type": "temporal",
    },
    {
      "cardinality": 3,
      "distinctRatio": 1,
      "name": "currency",
      "role": "dimension",
      "type": "nominal",
    },
    {
      "cardinality": 3,
      "distinctRatio": 1,
      "hasNegative": false,
      "hasZero": false,
      "isInteger": true,
      "max": 6300,
      "mean": 5200,
      "min": 4200,
      "name": "sales",
      "outlierCount": 0,
      "role": "measure",
      "skew": 0.172801,
      "stddev": 860.232527,
      "type": "quantitative",
    },
  ],
  "ranking": [
    {
      "chartType": "line",
      "id": "multi-series-line",
      "score": 20.4,
    },
    {
      "chartType": "line",
      "id": "focus-context-line",
      "score": 20.3,
    },
    {
      "chartType": "line",
      "id": "facet-small-multiples-line",
      "score": 20,
    },
    {
      "chartType": "line",
      "id": "sparkline-grid",
      "score": 19.2,
    },
    {
      "chartType": "line",
      "id": "facet-target-band",
      "score": 17,
    },
  ],
}
`;

exports[`golden profiles — committed profile -> intent -> ranking > geo: data-aware pipeline matches the committed golden 1`] = `
{
  "intent": {
    "allowNegative": true,
    "correlationStrength": 0.588,
    "density": "sparse",
    "dimensions": 1,
    "goal": "comparison",
    "maxNominalCardinality": 4,
    "measures": 3,
    "multiMetrics": true,
    "requiresGrouping": false,
    "temporals": 0,
  },
  "profiles": [
    {
      "cardinality": 4,
      "distinctRatio": 1,
      "geoKind": "region",
      "name": "city",
      "role": "dimension",
      "type": "nominal",
    },
    {
      "cardinality": 4,
      "distinctRatio": 1,
      "geoKind": "lat",
      "hasNegative": false,
      "hasZero": false,
      "isInteger": false,
      "max": 41.88,
      "mean": 36.6,
      "min": 29.76,
      "name": "lat",
      "outlierCount": 0,
      "role": "measure",
      "skew": -0.247102,
      "stddev": 4.951227,
      "type": "quantitative",
    },
    {
      "cardinality": 4,
      "distinctRatio": 1,
      "geoKind": "lon",
      "hasNegative": true,
      "hasZero": false,
      "isInteger": false,
      "max": -74,
      "mean": -93.81,
      "min": -118.24,
      "name": "lon",
      "outlierCount": 0,
      "role": "measure",
      "skew": -0.397812,
      "stddev": 16.045926,
      "type": "quantitative",
    },
    {
      "cardinality": 4,
      "distinctRatio": 1,
      "hasNegative": false,
      "hasZero": false,
      "isInteger": true,
      "max": 23,
      "mean": 15,
      "min": 7,
      "name": "temp",
      "outlierCount": 0,
      "role": "measure",
      "skew": 0,
      "stddev": 6.324555,
      "type": "quantitative",
    },
  ],
  "ranking": [
    {
      "chartType": "bar",
      "id": "diverging-bar",
      "score": 10.4,
    },
    {
      "chartType": "scatter",
      "id": "bubble-distribution",
      "score": 10,
    },
    {
      "chartType": "scatter",
      "id": "cohort-scatter",
      "score": 8.3,
    },
    {
      "chartType": "bar",
      "id": "simple-bar",
      "score": 7.4,
    },
    {
      "chartType": "area",
      "id": "layered-line-area",
      "score": 4,
    },
  ],
}
`;

exports[`golden profiles — committed profile -> intent -> ranking > sales: data-aware pipeline matches the committed golden 1`] = `
{
  "intent": {
    "allowNegative": false,
    "density": "sparse",
    "dimensions": 1,
    "goal": "trend",
    "maxNominalCardinality": 2,
    "measures": 1,
    "multiMetrics": false,
    "requiresGrouping": false,
    "temporals": 1,
  },
  "profiles": [
    {
      "cardinality": 2,
      "distinctRatio": 0.5,
      "geoKind": "region",
      "name": "region",
      "role": "dimension",
      "type": "nominal",
    },
    {
      "cardinality": 2,
      "distinctRatio": 0.5,
      "name": "quarter",
      "role": "dimension",
      "temporalGranularity": "month",
      "temporalRegular": true,
      "type": "temporal",
    },
    {
      "cardinality": 4,
      "distinctRatio": 1,
      "hasNegative": false,
      "hasZero": false,
      "isInteger": true,
      "max": 142000,
      "mean": 131250,
      "min": 120000,
      "name": "revenue",
      "outlierCount": 0,
      "role": "measure",
      "skew": -0.074885,
      "stddev": 8166.241486,
      "type": "quantitative",
    },
  ],
  "ranking": [
    {
      "chartType": "area",
      "id": "running-total-area",
      "score": 17.4,
    },
    {
      "chartType": "area",
      "id": "layered-line-area",
      "score": 15,
    },
    {
      "chartType": "line",
      "id": "target-band-line",
      "score": 15,
    },
    {
      "chartType": "line",
      "id": "multi-series-line",
      "score": 7.4,
    },
    {
      "chartType": "line",
      "id": "focus-context-line",
      "score": 7.3,
    },
  ],
}
`;

exports[`golden profiles — committed profile -> intent -> ranking > timeseries: data-aware pipeline matches the committed golden 1`] = `
{
  "intent": {
    "allowNegative": false,
    "density": "sparse",
    "dimensions": 0,
    "goal": "trend",
    "measures": 1,
    "multiMetrics": false,
    "requiresGrouping": false,
    "temporals": 1,
  },
  "profiles": [
    {
      "cardinality": 6,
      "distinctRatio": 1,
      "name": "month",
      "role": "dimension",
      "temporalGranularity": "month",
      "temporalRegular": true,
      "type": "temporal",
    },
    {
      "cardinality": 6,
      "distinctRatio": 1,
      "hasNegative": false,
      "hasZero": false,
      "isInteger": true,
      "max": 1310,
      "mean": 1173.333333,
      "min": 1000,
      "name": "visitors",
      "outlierCount": 0,
      "role": "measure",
      "skew": -0.193907,
      "stddev": 114.26091,
      "type": "quantitative",
    },
  ],
  "ranking": [
    {
      "chartType": "area",
      "id": "running-total-area",
      "score": 9.4,
    },
    {
      "chartType": "line",
      "id": "multi-series-line",
      "score": 7.4,
    },
    {
      "chartType": "line",
      "id": "focus-context-line",
      "score": 7.3,
    },
    {
      "chartType": "line",
      "id": "facet-small-multiples-line",
      "score": 7,
    },
    {
      "chartType": "line",
      "id": "facet-target-band",
      "score": 7,
    },
  ],
}
`;

exports[`golden profiles — committed profile -> intent -> ranking > two-measure: data-aware pipeline matches the committed golden 1`] = `
{
  "intent": {
    "allowNegative": false,
    "correlationStrength": 1,
    "density": "sparse",
    "dimensions": 0,
    "goal": "relationship",
    "measures": 2,
    "multiMetrics": true,
    "requiresGrouping": false,
    "temporals": 0,
  },
  "profiles": [
    {
      "cardinality": 5,
      "distinctRatio": 1,
      "hasNegative": false,
      "hasZero": false,
      "isInteger": true,
      "max": 300,
      "mean": 200,
      "min": 100,
      "name": "spend",
      "outlierCount": 0,
      "role": "measure",
      "skew": 0,
      "stddev": 70.710678,
      "type": "quantitative",
    },
    {
      "cardinality": 5,
      "distinctRatio": 1,
      "hasNegative": false,
      "hasZero": false,
      "isInteger": true,
      "max": 700,
      "mean": 470,
      "min": 240,
      "name": "revenue",
      "outlierCount": 0,
      "role": "measure",
      "skew": 0,
      "stddev": 162.63456,
      "type": "quantitative",
    },
  ],
  "ranking": [
    {
      "chartType": "scatter",
      "id": "correlation-scatter",
      "score": 11.4,
    },
    {
      "chartType": "scatter",
      "id": "cohort-scatter",
      "score": 7.3,
    },
    {
      "chartType": "scatter",
      "id": "bubble-distribution",
      "score": 1,
    },
  ],
}
`;
